Fix hover transparency on close button
Overthinking on my part. We can set the opacity to 1 on the titlebar button hover state, without obscuring the icons. When hovering the close button, the background is now fully opaque. This fixes the icon "misalignment" issue for the close button on hover. While technically still "mislaigned", its not noticeable to the end user.

Additionally I've done some testing at various display scales to ensure this is all working correctly. This will probably be the last commit, but I am fairly sure this is a solid CSS solution to the Windows 11 titlebar button issue.

--- a/chrome/special/windows_11_10.css
+++ b/chrome/special/windows_11_10.css
@@ -58,7 +58,7 @@
             
             :root[tabsintitlebar]:is(:not(:-moz-lwtheme), [lwt-default-theme-in-dark-mode]):not([sizemode="fullscreen"]) .titlebar-buttonbox:is(:hover, :hover:active)
             {
-            opacity: 0.8 !important;
+            opacity: 1 !important;
             }
 		.titlebar-button>.toolbarbutton-icon {
 			margin-top: -14px !important;
